# ai-morning-brief

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run.py
.github/workflows/: daily-brief.yml
config/: .env.example  config.yaml
docs/: architecture.md
src/: analyzer.py  blog_collector.py  collector.py  config.py  crawler.py  delivery.py  digest.py  models.py  orchestrator.py  ranker.py  summarizer.py
tests/: manual_test_blogs.py  repro_date_issues.py  repro_nav_links.py  test_analyzer.py  test_blog_collector.py  test_collector.py  test_config.py  test_crawler.py  test_delivery.py  test_digest.py  test_ranker.py  test_summarizer.py
